--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,19 @@
     src: url(../assets/font.firacode/FiraCode-Medium.ttf) format('truetype');
 }
 
+@font-face {
+    font-family: 'press start 2p';
+    src: url(../assets/press-start-2p/PressStart2P-Regular.ttf) format('truetype');
+}
+
 :root{
-    --cor1: #260104;
-    --cor2: #730220;
-    --cor3: #5F1B8C;
-    --cor4: #6F36BF;
-    --cor5: #F2F2F0;
+    --cor1: #88BD62;
+    --cor2: #B96657;
+    --cor3: #9E63B9;
+    --cor4: #849AC0;
+    --cor5: #F2F2F2;
     --font1: 'fira code', Arial, Helvetica, sans-serif;
-    
+    --font2: 'press start 2p', Cursive;
 
 }
 
@@ -54,10 +59,32 @@ a::before{
     padding: 0px 20px;
     box-shadow: 5px 5px 1px black;
     margin: 0;
+    transition: 0.3s;
 }
 
 #button:hover{
     background-color: var(--cor5);
-    color: var(--cor3);
-    transition: 0.3s;
+    color: var(--cor2);
+    transform: scale(1.05);
+}
+
+article{
+    width: 99vw;
+    height: 100vh;
+    background-image: url(../assets/img/gaming_1280.jpg);
+    background-size: cover;
+}
+
+.principal{
+    border: 2px solid black;
+    width: 350px;
+    height: 150px;
+}
+
+div h1{
+    font-size: 40px;
+}
+
+div p{
+    font-size: 30px;
 }
