--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ a::before{
 
 .type{
     display: flex;
+    color: #fff;
+    font-size: 25px;
+    align-items: center;
 }
 
 .icon{
@@ -136,9 +139,24 @@ a::before{
 
 .iden{
     color: var(--cor5);
+    margin-right: 20px;
 }
 
-dd .bar{
+.right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.progress-bar{
+    background-color: #fff;
     height: 40px;
     border: 5px solid #000;
+    box-sizing: border-box;
 }
+
+.progress-bar::-webkit-progress-bar,
+.progress-bar::-moz-progress-bar {
+    background-color: var(--cor4);
+}
+
