--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ a::before{
     padding-bottom: 100px;
     font-size: 25px;
     font-family: var(--font1);
-    border-bottom: 10px solid var(--cor3);
+    border-bottom: 10px solid #000;
 }
 
 .name.-second{
@@ -165,23 +165,34 @@ a::before{
     justify-content: space-around;
 }
 
+progress{
+    overflow: hidden;
+}
+
 .progress-bar{
-    background-color: #fff;
+    display: flex;
     height: 40px;
     border: 5px solid #000;
     box-sizing: border-box;
     width: 320px;
 }
 
+.progress-bar::before{
+    content: '';
+    width: 70%;
+    background-color: var(--cor1);
+}
+
 .progress-bar::-webkit-progress-bar,
 .progress-bar::-moz-progress-bar {
-    background-color: var(--cor4);
+    background-color: var(--cor1);
 }
 
 .project{
-    background-color: #000;
+    background-color: var(--cor3);
     padding-top: 50px;
     padding-bottom: 100px;
+    border-bottom: 10px solid #000;
 }
 
 
@@ -200,15 +211,16 @@ a::before{
 .android{
     margin-left: 140px;
     background-color: var(--cor5);
-    box-shadow: 5px 5px 0px var(--cor4);
+    box-shadow: 10px 10px 0px #000;
 }
 
 .ivan{
-    margin-left: 148px;
-    box-shadow: 5px 5px 0px var(--cor4);
+    margin-left: 170px;
+    box-shadow: 10px 10px 0px #000;
 }
 
 .taichi{
-    margin-left: 148px;
-    box-shadow: 5px 5px 0px var(--cor4);
+    margin-left: 190px;
+    box-shadow: 10px 10px 0px #000;
+    
 }
