--- a/css/style.css
+++ b/css/style.css
@@ -190,37 +190,34 @@ progress{
 
 .project{
     background-color: var(--cor3);
-    padding-top: 50px;
-    padding-bottom: 100px;
     border-bottom: 10px solid #000;
 }
 
-
 .title-project{
-    font-family: var(--font2);
-    color: var(--cor5);
-    font-size: 40px;
+    padding: 20px;
     text-align: center;
-    margin-bottom: 50px;
+    color: var(--cor5);
+    font-family: var(--font2);
+    font-size: 40px;
+    margin-bottom: 10px;
 }
 
-.img-project{
-    
+figure{
+    padding: 10px;
 }
 
-.android{
-    margin-left: 140px;
-    background-color: var(--cor5);
+.logo{
+    display: flex;
+    width: 280px;
+    height: 280px;
     box-shadow: 10px 10px 0px #000;
 }
 
-.ivan{
-    margin-left: 170px;
-    box-shadow: 10px 10px 0px #000;
+.-white{
+    background-color: #fff;
 }
 
-.taichi{
-    margin-left: 190px;
-    box-shadow: 10px 10px 0px #000;
-    
+.wrapper-card{
+    display: flex;
+    justify-content: space-around;
 }
