--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ figure{
 
 .main-article{
     background-color: var(--cor4);
-    
+    border-bottom: 10px solid #000;
 }
 
 .info{
@@ -244,4 +244,31 @@ figure{
     line-height: 1.3;
     text-align: justify;
     padding: 80px;
+}
+
+.button-arrow .content{
+    display: none;
+}
+
+.button-arrow{
+    width: 50px;
+    height: 50px;
+    background-color: var(--cor2);
+    box-shadow: 5px 5px 0 #000;
+    cursor: pointer;
+}
+
+.button-arrow::before{
+    content:'' ;
+    display: block;
+    width: 15px;
+    height: 15px;
+    box-sizing: border-box;
+    border: 15px solid transparent;
+    border-left: 30px solid var(--cor5);
+    transform: translateX(4px);
+}
+
+.button-arrow.-left::before{
+    transform: rotate(180deg) translateX(15px);
 }
