--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ progress{
     font-family: var(--font2);
     font-size: 40px;
     margin-bottom: 40px;
+    padding-top: 40px;
 }
 
 figure{
@@ -243,34 +244,47 @@ figure{
     font-weight: lighter;
     line-height: 1.3;
     text-align: justify;
-    padding: 80px;
+    padding: 0 80px 70px 80px;
 }
 
-.button-arrow .content{
-    display: none;
+.form{
+    background-color: var(--cor1);
+    color: var(--cor5);
+    font-size: 30px;
+    font-family: var(--font1);
+    line-height: 40px;
 }
 
-.button-arrow{
-    width: 50px;
-    height: 50px;
-    background-color: var(--cor2);
-    box-shadow: 5px 5px 0 #000;
-    cursor: pointer;
+.formbox{
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-.button-arrow::before{
-    content:'' ;
-    display: block;
-    width: 15px;
-    height: 15px;
+.input{
     box-sizing: border-box;
-    border: 15px solid transparent;
-    border-left: 30px solid var(--cor5);
-    transform: translateX(4px);
+    border: 5px solid #000;
+    font-size: 30px;
+    height: 50px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 99%;
 }
 
-.button-arrow.-left::before{
-    transform: rotate(180deg) translateX(15px);
+.input.-textarea{
+    height: 320px;
+}
+
+.submit{
+    box-shadow: 5px 5px 0 #000;
+    background-color: var(--cor2);
+    color: var(--cor5);
+    height: 50px;
+    width: 1360px;
+    font-size: 30px;
+    font-family: var(--font1);
+    margin-top: 30px;
+    margin-left: 72px;
+    margin-bottom: 40px;
 }
 
 footer{
